# fedjobs

./: .env.example  .pre-commit-config.yaml  README.md  example.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: update-active-jobs.yml  update-agencies.yml  update-all-jobs.yml
data/raw/: active_0854_jobs.csv  active_1550_jobs.csv  active_1560_jobs.csv  active_2210_jobs.csv  active_CDC_jobs.csv  active_DoT_jobs.csv  active_HHS_jobs.csv  active_IRS_jobs.csv  active_OMB_jobs.csv  active_OPM_jobs.csv  active_STATE_jobs.csv  active_TREASURY_jobs.csv  active_VA_jobs.csv  agency_codes.csv  all_0854_jobs.csv  all_1550_jobs.csv  all_1560_jobs.csv  all_2210_jobs.csv  all_CDC_jobs.csv  all_DoT_jobs.csv  all_HHS_jobs.csv  all_IRS_jobs.csv  all_OMB_jobs.csv  all_OPM_jobs.csv  all_STATE_jobs.csv  all_TREASURY_jobs.csv  all_VA_jobs.csv
fedjobs/: main.py
scripts/: update_readme_stats.py
