[project]
name = "fedjobs"
version = "1.0.0"
description = "A collector of USA jobs from federal government sources."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.3.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "rich==14.3.3",
]

[project.scripts]
fedjobs = "fedjobs.main:cli"
